overflow bug hotfix

--- a/src/App.scss
+++ b/src/App.scss
@@ -179,7 +179,7 @@
     font-weight: bolder;
     font-size: 20px;
     border-right: 1px solid white;
-    border-bottom: 1px solid white;
+    // border-bottom: 1px solid white;
   }
   .titleBar {
     border-bottom: 1px solid white;
@@ -191,11 +191,13 @@
     white 10px,
     white 20px,
   );
+    overflow: hidden;
+    z-index: 10;
   }
 
   .fourtyFive {
     position: absolute;
-    bottom: 13.3vh;
+    bottom: 13.6vh;
     left: 7vw;
     width: 40px;
     -webkit-animation: rotating 5s linear infinite;
@@ -216,14 +218,14 @@
       width:70%;
       padding-top: 15px;
       padding-bottom: 15px;
-      border-bottom: 1px solid white;
+      // border-bottom: 1px solid white;
     }
 
     .infoBox {
       width: 70%;
       margin-left: auto;
       margin-right: auto;
-      border-bottom: 1px solid white;
+      // border-bottom: 1px solid white;
       .textFormat {
         font-weight: bolder;
         font-stretch: ultra-condensed;
